--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="images/logo-drk.png" />
+    <link rel="icon" type="image/png" href="images/logo-drk.png">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Newer Company Inc.</title>
@@ -27,7 +27,7 @@
       </div>
 
       <div class="about-image" id="about">
-        <img src="images/about.jpg" alt="Side view of hands resting on table top and one person is holding a notepad and pen."/>
+        <img src="images/about.jpg" alt="Side view of hands resting on table top and one person is holding a notepad and pen.">
       </div>
       
       <div class="about text-block">
@@ -36,7 +36,7 @@
       </div>
 
       <div class="method-image" id="method">
-        <img src="images/method.jpg" alt="Birds-eye view of person writing in a planner on a table. Coffee, glasses, iPad, books, and photos scattered around them."/>
+        <img src="images/method.jpg" alt="Birds-eye view of person writing in a planner on a table. Coffee, glasses, iPad, books, and photos scattered around them.">
       </div>
 
       <div class="method text-block">
@@ -46,7 +46,7 @@
       </div>
 
       <div class="clients-image" id="clients">
-        <img src="images/clients.jpg" alt="Two men and one women working together at a table at a coffee shop."/>
+        <img src="images/clients.jpg" alt="Two men and one women working together at a table at a coffee shop.">
       </div>
 
       <div class="clients text-block">
@@ -55,7 +55,7 @@
       </div>
 
       <div class="contact-image" id="contact">
-        <img src="images/contact.jpg" alt ="Man smiling and talking on cell phone leaning against a wall."/>
+        <img src="images/contact.jpg" alt ="Man smiling and talking on cell phone leaning against a wall.">
       </div>
 
       <div class="contact text-block">
